--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <!-- <meta> descriptor -->
+    <meta name = "description" content = "This is Vibhor's Website">
+    <link rel = "style" type = "text/css" href = "style.css">
 </head>
 <body>
-<p>I"m hosted with GitHub Pages.</p>
+<h1>This is Vibhor's Website</h1>
+<p class = "classrequirement">This is me at Olympic National Park</p>
+<img src = "vibz.jpg" alt = "Vibz at Olympic ">
+<p><a href="https://www.youtube.com/watch?v=bU58YlOs4YI">Take a tour of Olympic!</a></p>
 </body>
 </html>
