--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <!-- <meta> descriptor -->
     <meta name = "description" content = "This is Vibhor's Website">
-    <link rel = "style" type = "text/css" href = "style.css">
+    <link rel = "stylesheet" type = "text/css" href = "stylesheet.css">
 </head>
 <body>
 <h1>This is Vibhor's Website</h1>
