added the id requirement

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
 <h1>This is Vibhor's Website</h1>
 <p class = "classrequirement">This is me at Olympic National Park</p>
+<p class = "classrequirement">This is the second element for class requirement</p>
 <img src = "vibz.jpg" alt = "Vibz at Olympic ">
 <p><a href="https://www.youtube.com/watch?v=bU58YlOs4YI">Take a tour of Olympic!</a></p>
+<h2 id="idrequirement">My whole personality was that I was in Seattle last summer</h2>
 </body>
 </html>
