image name typo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <img src = "vibz.jpg" alt = "Vibz at Olympic ">
 <p><a href="https://www.youtube.com/watch?v=bU58YlOs4YI">Take a tour of Olympic!</a></p>
 <div class = "VibzSunrise">
-    <img src = "vibzsunrise.jpg" alt="me watching sunset not sunrise lol">
+    <img src = "vbzsunrise.jpg" alt="me watching sunset not sunrise lol">
     <p>Me watching the sunset</p>
 </div>
 <h2 id="idrequirement">My whole personality was that I was in Seattle last summer</h2>
