--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <p class = "classrequirement">This is the second element for class requirement</p>
 <img src = "vibz.jpg" alt = "Vibz at Olympic ">
 <p><a href="https://www.youtube.com/watch?v=bU58YlOs4YI">Take a tour of Olympic!</a></p>
-<div class = "VibzSunrise">
+<div class = "vibzsunrise">
     <img src = "vbzsunrise.jpg" alt="me watching sunset not sunrise lol">
     <p>Me watching the sunset</p>
 </div>
